# model-100-serial

./: Cargo.toml
src/: main.rs  screen.rs  state.rs
src/modules/: chatgpt.rs  keyboard.rs  menu.rs  mod.rs  printer.rs
