[package]
name = "model-100-serial"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
futures = "0.3.31"
nalgebra = { version = "0.34.1", default-features = false }
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt"] }
tokio-serial = "5.4.5"

# == Module deps ==

# ChatGPT
rs_openai = "0.5.0"

# Printer
printers = "2.2.0"
markdown2pdf = "0.1.9"

# Keyboard
enigo = { version = "0.6.1", default-features = false, features = ["wayland"] }
